--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - production
+      - staging
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -13,6 +14,26 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Configurar Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Actualizar pip
+        run: |
+          python -m pip install --upgrade pip
+      - name: Verificar archivo requirements.txt
+        run: |
+          if [ ! -f requirements.txt ]; then
+            echo "requirements.txt no encontrado. No se ejecutará la acción."
+            exit 0
+          fi
+      - name: Instalar dependencias
+        run: |
+          python -m pip install -r requirements.txt
+      - name: Correr tests
+        run: |
+          pytest  
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
