--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=misopg1g1_api-gateway
 sonar.organization=misopg1g1
-
+sonar.coverage.exclusions=**tests/**,**docs/**,**common/**
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=api-gateway
 #sonar.projectVersion=1.0
