Generalizando deployment para recibir el nombre del secret dinamicamente

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           image: ${REGISTRY_HOST}/${REGISTRY_SPACE}/${REPO_NAME}-${BRANCH_NAME}:latest
           envFrom:
             - secretRef:
-                name: auth-secrets
+                name: ${REPO_NAME}-secrets
           ports:
             - containerPort: 3000
           imagePullPolicy: Always
